--- a/Adra-FE/src/app/app.component.html
+++ b/Adra-FE/src/app/app.component.html
@@ -1,14 +1,30 @@
 <adra-toolbar></adra-toolbar>
 
-<button mat-raised-button>Upload</button>
+<mat-sidenav-container class="adra-container">
+    <mat-sidenav #sidenav mode="side" opened class="adra-sidenav">
+        <mat-nav-list>
+            <mat-list-item routerLink="">Upload Report</mat-list-item>
+        </mat-nav-list>
+    </mat-sidenav>
+    <mat-sidenav-content class="adra-sidenav-content">
+        <form [formGroup]="fileUploadForm" (ngSubmit)="uploadReport()" class="file-upload-form">
+            <!-- Year -->
+            <mat-form-field class="example-full-width" appearance="fill">
+                <mat-label>Year</mat-label>
+                <input formControlName="year" matInput placeholder="Ex. 2022" value="2022">
+            </mat-form-field>
+            <!-- Month -->
+            <mat-form-field appearance="fill">
+                <mat-label>Month</mat-label>
+                <mat-select formControlName="month">
+                    <mat-option *ngFor="let key of keys" [value]="key">{{months[key]}}</mat-option>
+                </mat-select>
+            </mat-form-field>
+            <!-- File -->
+            <input #file type="file" (change)="onFileSelected(file.files)" />
+            <!-- Upload -->
+            <button class="btn-submit" mat-raised-button color="primary" type="submit">Upload</button>
+        </form>
+    </mat-sidenav-content>
 
-<mat-form-field appearance="fill">
-    <mat-label>Month</mat-label>
-    <mat-select>
-        <mat-option *ngFor="let key of keys" [value]="key">{{months[key]}}</mat-option>
-    </mat-select>
-</mat-form-field>
-<mat-form-field class="example-full-width" appearance="fill">
-    <mat-label>Year</mat-label>
-    <input matInput placeholder="Ex. 2022" value="2022">
-</mat-form-field>
+</mat-sidenav-container>
