--- a/Adra-FE/src/app/toolbar/toolbar.component.html
+++ b/Adra-FE/src/app/toolbar/toolbar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
+    <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon"
+        (click)="menuClicked.emit()">
         <mat-icon>menu</mat-icon>
     </button>
     <span>ADRA - Account Balance Overview Tool</span>
