--- a/Adra-FE/src/app/app.component.html
+++ b/Adra-FE/src/app/app.component.html
@@ -3,28 +3,13 @@
 <mat-sidenav-container class="adra-container">
     <mat-sidenav #sidenav mode="side" opened class="adra-sidenav">
         <mat-nav-list>
-            <mat-list-item routerLink="">Upload Report</mat-list-item>
+            <mat-list-item routerLink="">Upload Balance</mat-list-item>
+            <mat-list-item [routerLink]="['/view-balance']">View Balances</mat-list-item>
+            <mat-list-item [routerLink]="['/report']">Graph</mat-list-item>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content class="adra-sidenav-content">
-        <form [formGroup]="fileUploadForm" (ngSubmit)="uploadReport()" class="file-upload-form">
-            <!-- Year -->
-            <mat-form-field class="example-full-width" appearance="fill">
-                <mat-label>Year</mat-label>
-                <input formControlName="year" matInput placeholder="Ex. 2022" value="2022">
-            </mat-form-field>
-            <!-- Month -->
-            <mat-form-field appearance="fill">
-                <mat-label>Month</mat-label>
-                <mat-select formControlName="month">
-                    <mat-option *ngFor="let key of keys" [value]="key">{{months[key]}}</mat-option>
-                </mat-select>
-            </mat-form-field>
-            <!-- File -->
-            <input #file type="file" (change)="onFileSelected(file.files)" />
-            <!-- Upload -->
-            <button class="btn-submit" mat-raised-button color="primary" type="submit">Upload</button>
-        </form>
+        <router-outlet></router-outlet>
     </mat-sidenav-content>
 
 </mat-sidenav-container>
