--- a/Adra-FE/src/app/app.component.scss
+++ b/Adra-FE/src/app/app.component.scss
@@ -6,22 +6,10 @@
   right: 0;
 }
 .adra-sidenav {
-  padding: 20px;
+  //padding: 20px;
   width: 200px;
   background: rgb(234 234 234);
 }
 .mat-sidenav-content {
   padding: 20px;
-}
-
-.file-upload-form {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-.btn-submit {
-  margin-top: 10px;
-}
-.sidenav-button {
-  width: 100%;
 }
