--- a/Adra-FE/src/app/balance-viewer/view-balance/view-balance.component.html
+++ b/Adra-FE/src/app/balance-viewer/view-balance/view-balance.component.html
@@ -1,18 +1,9 @@
-<form [formGroup]="yearMonthForm" (ngSubmit)="viewBalance()">
-    <mat-form-field appearance="fill">
-        <mat-label>Year</mat-label>
-        <mat-select formControlName="year">
-            <mat-option *ngFor="let year of years" [value]="year">{{year}}</mat-option>
-        </mat-select>
-    </mat-form-field>
-    <mat-form-field appearance="fill">
-        <mat-label>Month</mat-label>
-        <mat-select formControlName="month">
-            <mat-option *ngFor="let month of months" [value]="month">{{monthList[month]}}</mat-option>
-        </mat-select>
-    </mat-form-field>
-    <button class="btn-submit" mat-raised-button color="primary" type="submit">View</button>
-</form>
+<div class="range-picker">
+    <adra-year-month-picker [years]="years" [months]="months" [selectedYearMonth]="selectedYearMonth"
+        (yearMonth)="yearMonthChanged($event)">
+    </adra-year-month-picker>
+    <button mat-raised-button color="primary" (click)="getAcBalance()">Generate</button>
+</div>
 
 <div class="" *ngIf="!!report">
     <h4>Balances as of {{monthList[report.month]}} {{report.year}}</h4>
