--- a/Adra-FE/src/app/upload-file/upload/upload.component.html
+++ b/Adra-FE/src/app/upload-file/upload/upload.component.html
@@ -12,7 +12,7 @@
         </mat-select>
     </mat-form-field>
     <!-- File -->
-    <input #file type="file" (change)="onFileSelected(file.files)" />
+    <input #file type="file" accept=".csv" (change)="onFileSelected(file.files)" />
     <!-- Upload -->
     <button class="btn-submit" mat-raised-button color="primary" type="submit">Upload</button>
 </form>
